--- a/web-resources/style.css
+++ b/web-resources/style.css
@@ -118,6 +118,9 @@ header .head_l li a{
 	font-weight: bold;
 	font-size: 15px;
 	color: #666;
+	width: 100%;
+	height: 100%;
+	display: block;
 }
 header .head_l li:hover{
 	border-bottom: 3px solid #F5ABB5;
@@ -210,7 +213,7 @@ i+*{
 	border-radius: 5px;
 	background: #fff;
 	width: 560px;
-	min-height: 300px;
+	min-height: 100px;
 	box-sizing: border-box;
 	overflow: auto;
 	margin: 70px auto;
@@ -345,6 +348,40 @@ i+*{
 	margin-right: 15px;
 }
 
+#popup_window .writepost {
+    background-color: #f5f8fa;
+    border-top: 1px solid #e6ecf0;
+    padding: 15px 30px;
+    padding-left: 100px;
+}
+#popup_window .writepost form{
+	position: relative;
+}
+#popup_window .writepost form .avatar{
+	position: absolute;
+	top: 0;
+	left: -70px;
+}
+#popup_window .writepost textarea{
+	border: rgba(170,170,255,1);
+	background: #fff;
+	border-radius: 10px;
+	padding: 10px;
+	max-width: 100%;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+#popup_window .writepost .right .submitwrap{
+	width: 100%;
+	text-align: right;
+}
+#popup_window .writepost .right .submitwrap .rounded{
+	display: inline-block;
+	border: none;
+	margin: 10px 0;
+}
+
 #subheader{
 	background: #fff;
 	box-sizing: border-box;
@@ -422,6 +459,9 @@ i+*{
 
 
 
+#mbody .centerSide {
+	padding-bottom: 100px;
+}
 #mbody .centerSide .postlist li{
 	background: #fff;
 	border-bottom: 1px solid transparent;
